--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <h2>Our goal is to improve public transit by engaging people with transit planning in their communities.</h2>
       <p class="lead">We plan to do this by openly sharing detailed metrics and proposed projects. </p>
       <br />
-      <p class="lead">Take a look at our <a href="http://35.202.164.146/" target="_blank">web app</a> and <a href="https://github.com/trynmaps/opentransit-api-docs/wiki/Getting-Started" target="_blank">API</a>.</p> 
+      <p class="lead">Take a look at our <a href="http://opentransit-map.s3-website-us-west-2.amazonaws.com" target="_blank">web app</a> and <a href="https://github.com/trynmaps/opentransit-api-docs/wiki/Getting-Started" target="_blank">API</a>.</p> 
     </div>
     <!-- /.container -->
   </section>
