update presentation link and goal header

--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
   <!-- About -->
   <section id="about" class="about">
     <div class="container text-center">
-      <h2>Our goal is to improve public transit by engaging people with transit planning in their communities.</h2>
-      <p class="lead">We plan to do this by openly sharing detailed metrics and proposed projects. </p>
-      <br />
+      <h2>Our goal is to empower riders and advocates to improve transit.</h2>
       <p class="lead">Take a look at our <a href="http://opentransit-map.s3-website-us-west-2.amazonaws.com" target="_blank">web app</a> and <a href="https://github.com/trynmaps/opentransit-api-docs/wiki/Getting-Started" target="_blank">API</a>.</p> 
     </div>
     <!-- /.container -->
@@ -44,7 +42,7 @@
 
   <section class="bg-primary">
     <div class="container text-center">
-      <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRMC3xV5WzCMkt3FJ8QNozWcR39NuTxLiCbcbnJelfFhsaEWWoTaK7hMWwZGLsXds6aYJzFKeCr2PLn/embed?start=true&loop=false&delayms=10000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+	    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTlmug9G_i9zImcb8d-W69tMkLe7osKoxTLh0Gl61llkJB8Egcd-vKM6fT9t6wEX5UY7S_36ZZP7MjV/embed?start=true&loop=true&delayms=5000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
     </div>
   </section>
 
